RESOLVED FIXED69840
Fix build with GLib 2.31
https://bugs.webkit.org/show_bug.cgi?id=69840
Summary Fix build with GLib 2.31
Tomeu Vizoso
Reported 2011-10-11 07:43:52 PDT
Fix build with GLib 2.31
Attachments
Patch (982 bytes, patch)
2011-10-11 07:45 PDT, Tomeu Vizoso
no flags
Patch (12.79 KB, patch)
2011-10-12 07:24 PDT, Gustavo Noronha (kov)
no flags
Tomeu Vizoso
Comment 1 2011-10-11 07:45:30 PDT
Gyuyoung Kim
Comment 2 2011-10-11 08:02:29 PDT
Gustavo Noronha (kov)
Comment 3 2011-10-11 08:08:58 PDT
Comment on attachment 110514 [details] Patch This partially defeats the purpose of the GTypedefs.h header, which was intended mainly to avoid including glib.h and a few other headers, and is lacking a ChangeLog entry (I know, it sucks) which you can generate with ./Tools/Scripts/prepare-ChangeLog. I see two ways going forward: 1 - give up on avoiding including glib (and then removing all of the relevant typedefs) 2 - stop using GMutex; there was some discussion in webkit-dev about dropping non-pthread/non-win32 implementations, I wonder if we could just go that route?
Gustavo Noronha (kov)
Comment 4 2011-10-12 07:24:29 PDT
Gustavo Noronha (kov)
Comment 5 2011-10-12 07:26:15 PDT
The only usage of GMutex/GCond remaining after this is inside the gstreamer backend and does not use the GOwnPtr support. We can make it use wtf threading in a follow up.
Martin Robinson
Comment 6 2011-10-12 08:40:58 PDT
Comment on attachment 110683 [details] Patch This breaks Win32 GTK+, but if possible, it should switch to ThreadingWin.cpp instead.
Gustavo Noronha (kov)
Comment 7 2011-10-12 09:54:42 PDT
Comment on attachment 110683 [details] Patch Clearing flags on attachment: 110683 Committed r97269: <http://trac.webkit.org/changeset/97269>
Gustavo Noronha (kov)
Comment 8 2011-10-12 09:54:50 PDT
All reviewed patches have been landed. Closing bug.
Yael
Comment 9 2012-05-26 16:40:04 PDT
*** Bug 72085 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.