Fix build with GLib 2.31 https://bugs.webkit.org/show_bug.cgi?id=69840

Patch by Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk> on 2011-10-12
Reviewed by Martin Robinson.

.:

* configure.ac: add check for pthread rwlock support.

Source/JavaScriptCore:

* GNUmakefile.list.am: removed ThreadingGtk.cpp.
* wtf/ThreadingPrimitives.h: remove GTK+-specific definitions.
* wtf/gobject/GOwnPtr.cpp: remove GCond and GMutex specializations.
* wtf/gobject/GOwnPtr.h: ditto.
* wtf/gobject/GTypedefs.h: remove GCond and GMutex forward declarations.
* wtf/gtk/ThreadingGtk.cpp: Removed.

git-svn-id: svn://svn.chromium.org/blink/trunk@97269 bbb929c8-8fbe-4397-9dbb-9b2b20218538